Mobile Fixes. Same collapsing issue.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -592,17 +592,18 @@ button {
 .index-accessory-wrapper {
   width: 100%;
   height: 100%;
+  min-height: 500px;
   padding: 80px 0;
   background: #f7f9fa; }
 
 @media (min-width: 900px) {
   .index-accessory-wrapper {
-    background: transparent;
-    padding: 0; } }
+    background: transparent; } }
 .index-accessory-display {
   width: 100%;
   height: 100%;
   max-width: 1080px;
+  margin: 0 auto;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -628,9 +629,6 @@ button {
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row; } }
-@media (min-width: 900px) {
-  .index-accessory-display {
-    margin: 80px auto; } }
 .accessory-one {
   width: 100%;
   height: 100%;
@@ -669,7 +667,6 @@ button {
     flex-direction: row; } }
 .accessory-one-banner {
   width: 90%;
-  min-height: 400px;
   max-width: 400px; }
   .accessory-one-banner img {
     width: 70%;
