--- a/public/sass/3-views/_index.sass
+++ b/public/sass/3-views/_index.sass
@@ -419,6 +419,7 @@ button
 .index-accessory-wrapper
   width: 100%
   height: 100%
+  min-height: 500px
   padding: 80px 0
   background: $back-white
 
@@ -426,13 +427,13 @@ button
 
   .index-accessory-wrapper
     background: transparent
-    padding: 0
 
 
 .index-accessory-display
   width: 100%
   height: 100%
   max-width: 1080px
+  margin: 0 auto
   display: flex
   flex-direction: column
   justify-content: center
@@ -442,12 +443,6 @@ button
 
   .index-accessory-display
     flex-direction: row
-
-@media (min-width: 900px)
-
-  .index-accessory-display
-    margin: 80px auto
-
 
 
 .accessory-one
@@ -477,7 +472,6 @@ button
 
 .accessory-one-banner
   width: 90%
-  min-height: 400px
   max-width: 400px
 
   img
